--- a/dev/index.html
+++ b/dev/index.html
@@ -205,7 +205,7 @@
               </form>
           </section>
           <section class="footer-sec-2">
-             <img src="./assets/images/logo-bookmarkfoot.svg" alt="" class="logo-footer">
+             <a href="#inicio"><img src="./assets/images/logo-bookmarkfoot.svg" alt="" class="logo-footer"></a>
              <ul class="ul-footer">
                  <li class="li-footer-item"><a href="#features" class="link-menu">FEATURES</a></li>
                  <li class="li-footer-item"><a href="#faqs" class="link-menu">FAQS</a></li>
