--- a/dev/index.html
+++ b/dev/index.html
@@ -47,7 +47,7 @@
             <img src="./assets/images/illustration-hero.svg" alt="" class="section-img">
 
         </div>
-        <div class="section-item">
+        <div class="section-item section-content">
             <h1 class="section-title">A Simple Bookmark Manager</h1>
             <p class="section-text">A clean and simple interface to organize your favourite websites. Open a new
                 browser tab and see your sites load instantly. Try it for free</p>
@@ -72,26 +72,32 @@
         <div class="tab-content-container">
             <article class="tabs-content active">
                 <img src="./assets/images/illustration-features-tab-1.svg" alt="" class="tabs-img tabs-img-first">
+                <div class="tab-info">
                 <h2 class="tabs-title">Bookmark in one click</h2>
                 <p class="tabs-text">Organize your bookmarks however you like. Our simple drag-and-drop interface
                     gives you complete control over how you manage your favourite sites.</p>
-                <button class="button button-blue">More Info</button>
+                    <button class="button button-blue">More Info</button>
+                    </div>
             </article>
             <article class="tabs-content">
                 <img src="./assets/images/illustration-features-tab-2.svg" alt=""class="tabs-img">
+                <div class="tab-info">
                 <h2 class="tabs-title">Intelligent search</h2>
                 <p class="tabs-text">Our powerful search feature will help you find saved sites in no time at all.
                     No need to trawl through all of your bookmarks.
                 </p>
                 <button class="button button-blue">More Info</button>
+            </div>
             </article>
             <article class="tabs-content">
                 <img src="./assets/images/illustration-features-tab-3.svg" alt="" class="tabs-img">
+                <div class="tab-info"></div>
                 <h2 class="tabs-title">Share your bookmarksh</h2>
                 <p class="tabs-text"> Easily share your bookmarks and collections with others. Create a shareable
                     link that you can send at the click of a button.
                 </p>
                 <button class="button button-blue">More Info</button>
+            </div>
             </article>
         </div>
     </div>
