--- a/dev/index.html
+++ b/dev/index.html
@@ -91,7 +91,7 @@
             </article>
             <article class="tabs-content">
                 <img src="./assets/images/illustration-features-tab-3.svg" alt="" class="tabs-img">
-                <div class="tab-info"></div>
+                <div class="tab-info">
                 <h2 class="tabs-title">Share your bookmarksh</h2>
                 <p class="tabs-text"> Easily share your bookmarks and collections with others. Create a shareable
                     link that you can send at the click of a button.
