--- a/dev/index.html
+++ b/dev/index.html
@@ -149,7 +149,7 @@
             <div class="accordion-item">
                 <div class="accordion-title-icon">
                     <h3 class="accordion-title">What is Bookmark?</h3>
-                    <img src="./assets/images/icon-arrow.svg" alt="" class="img-accordion">
+                    <i class="fas fa-chevron-down img-accordion"></i>
                 </div>
                 <div class="div-text">
                     <p class="accordion-text">
@@ -161,7 +161,7 @@
             <div class="accordion-item">
                 <div class="accordion-title-icon">
                     <h3 class="accordion-title"> How can I request a new browser?</h3>
-                    <img src="./assets/images/icon-arrow.svg" alt="" class="img-accordion">
+                    <i class="fas fa-chevron-down img-accordion"></i> 
                 </div>
                 <div class="div-text">
                     <p class="accordion-text">
@@ -175,7 +175,7 @@
             <div class="accordion-item">
                 <div class="accordion-title-icon">
                     <h3 class="accordion-title">Is there a mobile app?</h3>
-                    <img src="./assets/images/icon-arrow.svg" alt="" class="img-accordion">
+                    <i class="fas fa-chevron-down  img-accordion"></i> 
                 </div>
                 <div class="div-text">
                     <p class="accordion-text">
@@ -189,7 +189,7 @@
             <div class="accordion-item">
                 <div class="accordion-title-icon">
                     <h3 class="accordion-title"> What about other Chromium browsers?</h3>
-                    <img src="./assets/images/icon-arrow.svg" alt="" class="img-accordion">
+                    <i class="fas fa-chevron-down img-accordion"></i>
                 </div>
                 <div class="div-text">
                     <p class="accordion-text">
