--- a/dev/index.html
+++ b/dev/index.html
@@ -211,12 +211,14 @@
               </form>
           </section>
           <section class="footer-sec-2">
+              <div class="log-menu">
              <a href="#inicio"><img src="./assets/images/logo-bookmarkfoot.svg" alt="" class="logo-footer"></a>
              <ul class="ul-footer">
                  <li class="li-footer-item"><a href="#features" class="link-menu">FEATURES</a></li>
                  <li class="li-footer-item"><a href="#faqs" class="link-menu">FAQS</a></li>
                  <li class="li-footer-item"><a href="#contact" class="link-menu">CONTACT</a></li>
              </ul>
+            </div>
              <section class="redes">
                 <i class="fab fa-facebook-square"></i>
                 <i class="fab fa-instagram"></i>
