--- a/dev/index.html
+++ b/dev/index.html
@@ -116,7 +116,7 @@
 
                 <p class="browser-card-description"> Minimum version 62</p>
                 <img src="./assets/images/bg-dots.svg" alt="" class="image-dots">
-                <button class="button-card">Add & Install Extension</button>
+                <button class="button-card button button-blue">Add & Install Extension</button>
             </article>
             <article class="browser-card">
                 <img class="browser-card-img" src="./assets/images/logo-firefox.svg" alt="">
@@ -125,7 +125,7 @@
 
                 <p class="browser-card-description"> Minimum version 55</p>
                 <img src="./assets/images/bg-dots.svg" alt="" class="image-dots">
-                <button class="button-card">Add & Install Extension</button>
+                <button class="button-card button button-blue">Add & Install Extension</button>
             </article>
             <article class="browser-card">
                 <img class="browser-card-img" src="./assets/images/logo-opera.svg" alt="">
@@ -134,7 +134,7 @@
 
                 <p class="browser-card-description">Minimum version 46</p>
                 <img src="./assets/images/bg-dots.svg" alt="" class="image-dots">
-                <button class="button-card">Add & Install Extension</button>
+                <button class="button-card button button-blue">Add & Install Extension</button>
             </article>
         </div>
     </section>
