--- a/dev/index.html
+++ b/dev/index.html
@@ -220,8 +220,8 @@
              </ul>
             </div>
              <section class="redes">
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-instagram"></i>
+                <a class="enlace-redes" href="https://facebook.com" target="blank"><i class="fab fa-facebook-square"></i></a>
+                <a class="enlace-redes" href="https://instagram.com" target="blank"><i class="fab fa-instagram"></i></a>
             </section>
           </section>
     </footer>
