--- a/dev/index.html
+++ b/dev/index.html
@@ -35,8 +35,8 @@
                 <button class="login-button" id="login-button">Login</button>
             </nav>
             <section class="redes">
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-instagram"></i>
+                <a class="enlace-redes" href="https://facebook.com" target="blank"><i class="fab fa-facebook-square"></i></a>
+                <a class="enlace-redes" href="https://instagram.com" target="blank"><i class="fab fa-instagram"></i></a>
             </section>
         </div>
     </header>
