--- a/dev/index.html
+++ b/dev/index.html
@@ -32,7 +32,7 @@
                     <li class="main-menu__item"><a href="#contact" class="link-menu">Contact</a></li>
                 </ul> 
                 
-                <button class="login-button" id="login-button">Login</button>
+                <button class="login-button button-red" id="login-button">Login</button>
             </nav>
             <section class="redes">
                 <a class="enlace-redes" href="https://facebook.com" target="blank"><i class="fab fa-facebook-square"></i></a>
